@@ -59,6 +59,7 @@
 		<sites>Seiten</sites>
 		<create_site>Seite erstellen</create_site>
 		<edit_news>Nachricht bearbeiten</edit_news>
+		<mainpage>Hauptseite</mainpage>
 		<back_to_mainpage>Zurück zur Hauptseite</back_to_mainpage>
 		<communication>Kommunikation</communication>
 		<contact_inquiry>Kontakt anfragen</contact_inquiry>
